--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/devblog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  csong2023
 
 # Build settings
-theme: minima
+theme: mediator
 plugins:
   - jekyll-feed
 
