--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ twitter_username: jekyllrb
 github_username:  csong2023
 
 # Build settings
-theme: mediator
+theme: minima
 plugins:
   - jekyll-feed
 
